
PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5430: TestTezGraceParallelism failing due to tez log change (knoguchi)

PIG-5406: TestJoinLocal imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (rohini)

PIG-5425: Pig 0.15 and later don't set context signature correctly (jtolar via rohini)

PIG-5413: [spark] TestStreaming.testInputCacheSpecs failing with "File script1.pl was already registered" (knoguchi)

PIG-5415: [spark] TestScriptLanguage conflict between multiple SparkContext (after spark2.4 upgrade) (knoguchi)

PIG-5412: testSkewedJoinOuter spark unit-test failing with ClassNotFoundException (knoguchi)

PIG-5404: FLATTEN infers wrong datatype (knoguchi)

PIG-5243: describe with typecast on as-clause shows the types before the typecasting (knoguchi)

PIG-5403: streaming job stuck with script failure when combined with ORDER BY (knoguchi)

PIG-5362: Parameter substitution of shell cmd results doesn't handle backslash addendum (szita)

PIG-5395: Pig build is failing due to maven repo access point change (szita)

PIG-5375: NullPointerException for multi-level self unions with Tez UnionOptimizer (knoguchi)

PIG-5386: Pig local mode with bundled Hadoop broken (nkollar)

PIG-5387: Test failures on JRE 11 (nkollar)

PIG-5383: OrcStorage fails when "bytearray" represents unknown type (knoguchi)

PIG-5372: SAMPLE/RANDOM(udf) before skewed join failing with NPE (knoguchi)

PIG-5374: Use CircularFifoBuffer in InterRecordReader (szita)

PIG-5373: InterRecordReader might skip records if certain sync markers are used (szita)

PIG-5370: Union onschema + columnprune dropping used fields (knoguchi)
