@@ -88,7 +88,7 @@ snappy.version=0.2
 leveldbjni.version=1.8
 curator.version=2.6.0
 htrace.version=3.2.0-incubating
-htrace4.version=4.0.1-incubating
+htrace4.version=4.2.0-incubating
 commons-lang3.version=3.12.0
 scala-xml.version=1.0.5
 glassfish.el.version=3.0.1-b08
