@@ -116,6 +116,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-5433: Fix test failures with TestHBaseStorage and htrace dependency (rohini)
+
 PIG-5430: TestTezGraceParallelism failing due to tez log change (knoguchi)
 
 PIG-5406: TestJoinLocal imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (rohini)
